RESOLVED FIXED64500
Select elements expose the wrong children if children are added dynamically
https://bugs.webkit.org/show_bug.cgi?id=64500
Summary Select elements expose the wrong children if children are added dynamically
Jon Honeycutt
Reported 2011-07-13 19:22:02 PDT
Non-multiple select elements expose the wrong children to accessibility clients if child <option> elements are added dynamically.
Attachments
Patch (6.90 KB, patch)
2011-07-14 00:07 PDT, Jon Honeycutt
bdakin: review+
Jon Honeycutt
Comment 1 2011-07-13 19:22:39 PDT
Jon Honeycutt
Comment 2 2011-07-14 00:07:11 PDT
Alexey Proskuryakov
Comment 3 2011-07-14 10:54:03 PDT
- // would be a WMLElement, but WML builds don't use accessbility features at all. + // would be a WMLElement, but WML builds don't use accessibility features at all. We don't have WML any more.
Beth Dakin
Comment 4 2011-07-15 14:06:30 PDT
Comment on attachment 100779 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=100779&action=review > Source/WebCore/accessibility/AccessibilityMenuListPopup.cpp:99 > + // would be a WMLElement, but WML builds don't use accessibility features at all. You should consider just deleting this comment based on Alexey's info.
Jon Honeycutt
Comment 5 2011-07-16 05:31:12 PDT
Removed comment and landed in <http://trac.webkit.org/changeset/91128>.
Note You need to log in before you can comment on or make changes to this bug.