Ensure that a single select element's child option elements are reported correctly to accessibility clients if the children are changed.

https://bugs.webkit.org/show_bug.cgi?id=64500
<rdar://problem/9773066>

Reviewed by Beth Dakin.

Source/WebCore:

Test: platform/win/accessibility/single-select-children-changed.html

* accessibility/AccessibilityMenuListPopup.cpp:
(WebCore::AccessibilityMenuListPopup::addChildren):
Remove a comment about WML, which we no longer support.
(WebCore::AccessibilityMenuListPopup::childrenChanged):
Don't just remove children that were detached - this will miss childen
that were dynamically added. Clear the children and re-add them.

LayoutTests:

* platform/win/accessibility/single-select-children-changed-expected.txt: Added.
* platform/win/accessibility/single-select-children-changed.html: Added.

Canonical link: https://commits.webkit.org/80383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91128 268f45cc-cd09-0410-ab3c-d52691b4dbfc